Refactor dictionary and implement packed element list
- Split dictionary reading and writing to 2 classes
- Instead of using an arraylist of DictionaryElement, implement
  a packed variation