@@ -14,32 +14,31 @@ import java.nio.file.Paths;
 import java.util.*;
 import java.util.stream.Stream;
 
-/** Contains the in memory dictionary, allowing reading and writing to it, as well as saving and loading to disk */
-public class Dictionary implements Closeable, Flushable {
+/** Contains the in memory dictionary, allowing querying it */
+public class Dictionary {
 
     private final String dir;
     private final Charset encoding;
     private final CharsetDecoder charsetDecoder;
 
-    private final ArrayList<DictionaryElement> elements;
-    private static final int BLOCK_SIZE = 4;
+    private PackedDictionaryElements elements;
+    static final int BLOCK_SIZE = 4;
 
-    private final PostingListWriter postingListWriter;
     private final PostingListReader postingListReader;
 
 
     // Contains the terms
-    private static final String TERMS_FILE_NAME = "terms.bin";
+    static final String TERMS_FILE_NAME = "terms.bin";
     private final TermsManager termsManager;
 
     // Contains the dictionary elements
-    private static final String DICTIONARY_FILE_NAME = "dictionary.bin";
+    static final String DICTIONARY_FILE_NAME = "dictionary.bin";
+
+    static final String DICTIONARY_STATS_FILE = "dictionary-stats.bin";
 
     // Contains the postings
-    private static final String POSTINGS_FILE_NAME = "postings.bin";
+    static final String POSTINGS_FILE_NAME = "postings.bin";
 
-    private String curTerm;
-    private int curTermPostingPtr;
     private int totalNumberOfTokens;
     private int uniqueNumberOfTokens;
 
@@ -56,83 +55,38 @@ public class Dictionary implements Closeable, Flushable {
                 .onMalformedInput(CodingErrorAction.REPLACE)
                 .onUnmappableCharacter(CodingErrorAction.REPLACE);
 
-        this.curTerm = null;
-        this.curTermPostingPtr = -1;
 
-        if (Files.exists(Path.of(dir, DICTIONARY_FILE_NAME)) && Files.exists(Path.of(dir, POSTINGS_FILE_NAME))) {
-            this.elements = new ArrayList<>();
-            deserialize();
-        } else {
-            Files.createDirectories(Paths.get(dir));
-            this.elements = new ArrayList<>();
-            this.totalNumberOfTokens = 0;
-            this.uniqueNumberOfTokens = 0;
-        }
+//        if (Files.exists(Path.of(dir, DICTIONARY_FILE_NAME)) && Files.exists(Path.of(dir, POSTINGS_FILE_NAME))) {
 
-        var postingsFos = new FileOutputStream(Paths.get(dir, POSTINGS_FILE_NAME).toString());
-        var postingsOs = new BufferedOutputStream(postingsFos);
-        this.postingListWriter = new PostingListWriter(postingsOs);
+        deserialize();
         this.postingListReader = new PostingListReader(Path.of(dir, POSTINGS_FILE_NAME).toString());
         this.termsManager = new TermsManager(Paths.get(dir, TERMS_FILE_NAME).toString(), encoding, mmapSize);
     }
 
-    public void serialize(DataOutputStream os) throws IOException {
-        // write constant statistics
-        os.writeInt(totalNumberOfTokens);
-        os.writeInt(uniqueNumberOfTokens);
-
-        assert uniqueNumberOfTokens == elements.size();
-        // write elements
-        for (int i=0; i < uniqueNumberOfTokens; ++i) {
-            if (i % BLOCK_SIZE == 0) {
-                ((FirstBlockElement)elements.get(i)).serialize(os);
-            } else {
-                ((OtherBlockElement)elements.get(i)).serialize(os);
-            }
-        }
-    }
-
-    public void serialize() throws IOException {
-        var os = new DataOutputStream(
-                new BufferedOutputStream(
-                        new FileOutputStream(Path.of(dir, DICTIONARY_FILE_NAME).toString())
-                )
-        );
-        serialize(os);
-        os.flush();
-        os.close();
-    }
-
-    public void deserialize(DataInputStream is) throws IOException {
-        if (elements.size() != 0) {
-            throw new IllegalStateException("Cannot deserialize into non empty dictionary");
-        }
-
+    public void deserialize(DataInputStream statsIs, DataInputStream elementsIs) throws IOException {
         // read constant statistics
-        totalNumberOfTokens = is.readInt();
-        uniqueNumberOfTokens = is.readInt();
-
-        // read elements
-        elements.ensureCapacity(uniqueNumberOfTokens);
-        for (int i=0; i < uniqueNumberOfTokens; ++i) {
-            if (i % BLOCK_SIZE == 0) {
-                elements.add(FirstBlockElement.deserialize(is));
-            } else {
-                elements.add(OtherBlockElement.deserialize(is));
-            }
-        }
-
-
+        totalNumberOfTokens = statsIs.readInt();
+        uniqueNumberOfTokens = statsIs.readInt();
+        assert uniqueNumberOfTokens <= totalNumberOfTokens;
+        elements = new PackedDictionaryElements(elementsIs, uniqueNumberOfTokens);
     }
 
     public void deserialize() throws IOException {
-        var is = new DataInputStream(
+        var statsIs = new DataInputStream(
+                new BufferedInputStream(
+                        new FileInputStream(Path.of(dir, DICTIONARY_STATS_FILE).toString())
+                )
+        );
+
+        var elementsIs = new DataInputStream(
                 new BufferedInputStream(
                         new FileInputStream(Path.of(dir, DICTIONARY_FILE_NAME).toString())
                 )
         );
-        deserialize(is);
-        is.close();
+
+        deserialize(statsIs, elementsIs);
+        statsIs.close();
+        elementsIs.close();
     }
 
     /** Returns the term of this element, assuming its index is known */
@@ -170,59 +124,6 @@ public class Dictionary implements Closeable, Flushable {
             return Utils.streamToEnumeration(Stream.empty());
         }
     }
-
-    /** Begins a new term */
-    public void beginTerm(String term) throws IOException {
-        if (postingListWriter.getCurrentTerm() != null && postingListWriter.getCurrentTerm().compareTo(term) >= 0)
-        {
-            throw new IllegalArgumentException("Terms must be written into dictionary in lexicographically increasing order");
-        }
-        // Finish the previous term(if there was any)
-        endTerm();
-        curTerm = term;
-        curTermPostingPtr = postingListWriter.startTerm(term);
-        uniqueNumberOfTokens++;
-    }
-
-    public void endTerm() throws IOException {
-        if (curTerm == null) {
-            return;
-        }
-        if (postingListWriter.getCurrentTermDocumentFrequency() == 0) {
-            throw new IllegalStateException("You cannot end a term which has an empty posting list");
-        }
-
-        var termAllocationResult = termsManager.allocateTerm(postingListWriter.getCurrentTerm());
-
-        // begin a new block
-        if (elements.size() % BLOCK_SIZE == 0) {
-            var element = new FirstBlockElement(
-                    postingListWriter.getCurrentTermDocumentFrequency(),
-                    curTermPostingPtr,
-                    termAllocationResult.length,
-                    termAllocationResult.position);
-            elements.add(element);
-        } else {
-            // add to previous block
-            var element = new OtherBlockElement(
-                    postingListWriter.getCurrentTermDocumentFrequency(),
-                    curTermPostingPtr,
-                    termAllocationResult.length
-            );
-            elements.add(element);
-
-        }
-
-        curTerm = null;
-        curTermPostingPtr = -1;
-
-    }
-
-    public void addTermOccurence(int docId, int freqInDoc) throws IOException {
-        totalNumberOfTokens += freqInDoc;
-        postingListWriter.add(docId, freqInDoc);
-    }
-
 
     /** Allows treating the dictionary as a list of byte buffers(term encodings),
      *  allowing to perform binary search over them
@@ -269,19 +170,5 @@ public class Dictionary implements Closeable, Flushable {
     /** Returns the number of different tokens in the dictionary.  */
     public int getUniqueNumberOfTokens() {
         return uniqueNumberOfTokens;
-    }
-
-    @Override
-    public void close() throws IOException {
-        flush();
-        postingListWriter.close();
-        termsManager.close();
-    }
-
-    @Override
-    public void flush() throws IOException {
-        postingListWriter.flush();
-        termsManager.flush();
-        serialize();
     }
 }
